--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,8 +1,12 @@
+:root {
+  --red-1: hsl(4, 85%, 59%);
+}
+
 .logo-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.75rem;
 }
 
 .logo-text {
@@ -25,6 +29,80 @@
   &:hover {
     color: #fff;
   }
+}
+
+.navbar {
+  transition: all 0.5s ease-in-out;
+  border-bottom: 5px solid var(--red-1);
+  padding: 0;
+  height: 80px;
+}
+
+.navbar .container {
+  height: 100%;
+}
+
+.navbar-sticky {
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.navbar-collapse {
+  justify-content: flex-end;
+  height: 100%;
+}
+
+.navbar-nav {
+  height: 100%;
+}
+
+.nav-item {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav-item:hover {
+  background-color: var(--red-1);
+  cursor: pointer;
+}
+
+.nav-link {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-link:hover {
+  color: white;
+}
+
+.logo-subtext {
+  margin-top: -10px;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+}
+
+.header .decoration-star {
+  top: 80px;
+  left: -200px;
+  width: 500px;
+  opacity: 0.7;
+}
+
+.header .decoration-star-2 {
+  top: 80px;
+  right: -200px;
+  width: 500px;
+  opacity: 0.7;
+}
+
+.header-image {
+  max-width: 400px;
+  border-radius: 2rem;
 }
 
 // Video Play Button
@@ -105,30 +183,6 @@
 .video-modal .modal-dialog {
   max-width: 1150px;
   margin-top: 50px;
-}
-
-.header .decoration-star {
-  top: 80px;
-  left: -200px;
-  width: 500px;
-  opacity: 0.7;
-}
-
-.header .decoration-star-2 {
-  top: 80px;
-  right: -200px;
-  width: 500px;
-  opacity: 0.7;
-}
-
-.navbar {
-  transition: all 0.5s ease-in-out;
-}
-
-.navbar-sticky {
-  background: #fff;
-  opacity: 0.9;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .details .decoration-star {
