--- a/css/styles.css
+++ b/css/styles.css
@@ -238,6 +238,18 @@
   background-color: rebeccapurple;
 }
 
+.modal-footer {
+  justify-content: center;
+}
+
+.send-btn-custom {
+  flex: 1;
+}
+
+.close-btn-custom {
+  flex: 1;
+}
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px;
