--- a/css/fontawesome.css
+++ b/css/fontawesome.css
@@ -1,5 +1,5 @@
 /*!
- * Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com
+ * Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  * Copyright 2023 Fonticons, Inc.
  */
@@ -7697,6 +7697,10 @@ readers do not read off random characters that represent icons */
   content: "\f064";
 }
 
+.fa-arrow-turn-right::before {
+  content: "\f064";
+}
+
 .fa-mail-forward::before {
   content: "\f064";
 }
@@ -8224,7 +8228,7 @@ readers do not read off random characters that represent icons */
 }
 
 /*!
- * Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com
+ * Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  * Copyright 2023 Fonticons, Inc.
  */
@@ -8291,10 +8295,6 @@ readers do not read off random characters that represent icons */
 
 .fa-ups:before {
   content: "\f7e0";
-}
-
-.fa-pixiv:before {
-  content: "\e640";
 }
 
 .fa-wpexplorer:before {
@@ -8437,10 +8437,6 @@ readers do not read off random characters that represent icons */
   content: "\f38f";
 }
 
-.fa-brave:before {
-  content: "\e63c";
-}
-
 .fa-sistrix:before {
   content: "\f3ee";
 }
@@ -8471,10 +8467,6 @@ readers do not read off random characters that represent icons */
 
 .fa-edge:before {
   content: "\f282";
-}
-
-.fa-threads:before {
-  content: "\e618";
 }
 
 .fa-napster:before {
@@ -8665,10 +8657,6 @@ readers do not read off random characters that represent icons */
   content: "\f384";
 }
 
-.fa-opensuse:before {
-  content: "\e62b";
-}
-
 .fa-pied-piper-alt:before {
   content: "\f1a8";
 }
@@ -8703,10 +8691,6 @@ readers do not read off random characters that represent icons */
 
 .fa-scribd:before {
   content: "\f28a";
-}
-
-.fa-debian:before {
-  content: "\e60b";
 }
 
 .fa-openid:before {
@@ -8861,10 +8845,6 @@ readers do not read off random characters that represent icons */
   content: "\f294";
 }
 
-.fa-square-letterboxd:before {
-  content: "\e62e";
-}
-
 .fa-sticker-mule:before {
   content: "\f3f7";
 }
@@ -8907,10 +8887,6 @@ readers do not read off random characters that represent icons */
 
 .fa-confluence:before {
   content: "\f78d";
-}
-
-.fa-shoelace:before {
-  content: "\e60c";
 }
 
 .fa-mdb:before {
@@ -9037,10 +9013,6 @@ readers do not read off random characters that represent icons */
   content: "\f612";
 }
 
-.fa-square-threads:before {
-  content: "\e619";
-}
-
 .fa-hackerrank:before {
   content: "\f5f7";
 }
@@ -9075,10 +9047,6 @@ readers do not read off random characters that represent icons */
 
 .fa-envira:before {
   content: "\f299";
-}
-
-.fa-google-scholar:before {
-  content: "\e63b";
 }
 
 .fa-square-gitlab:before {
@@ -9257,10 +9225,6 @@ readers do not read off random characters that represent icons */
   content: "\f1ca";
 }
 
-.fa-signal-messenger:before {
-  content: "\e663";
-}
-
 .fa-paypal:before {
   content: "\f1ed";
 }
@@ -9305,10 +9269,6 @@ readers do not read off random characters that represent icons */
   content: "\e531";
 }
 
-.fa-mintbit:before {
-  content: "\e62f";
-}
-
 .fa-ethereum:before {
   content: "\f42e";
 }
@@ -9339,10 +9299,6 @@ readers do not read off random characters that represent icons */
 
 .fa-bimobject:before {
   content: "\f378";
-}
-
-.fa-brave-reverse:before {
-  content: "\e63d";
 }
 
 .fa-facebook-f:before {
@@ -9481,10 +9437,6 @@ readers do not read off random characters that represent icons */
   content: "\f1d5";
 }
 
-.fa-letterboxd:before {
-  content: "\e62d";
-}
-
 .fa-symfony:before {
   content: "\f83d";
 }
@@ -9515,10 +9467,6 @@ readers do not read off random characters that represent icons */
 
 .fa-erlang:before {
   content: "\f39d";
-}
-
-.fa-x-twitter:before {
-  content: "\e61b";
 }
 
 .fa-cotton-bureau:before {
@@ -9667,10 +9615,6 @@ readers do not read off random characters that represent icons */
 
 .fa-cmplid:before {
   content: "\e360";
-}
-
-.fa-upwork:before {
-  content: "\e641";
 }
 
 .fa-facebook:before {
@@ -9903,10 +9847,6 @@ readers do not read off random characters that represent icons */
 
 .fa-supple:before {
   content: "\f3f9";
-}
-
-.fa-webflow:before {
-  content: "\e65c";
 }
 
 .fa-rebel:before {
@@ -10189,10 +10129,6 @@ readers do not read off random characters that represent icons */
   content: "\f2c4";
 }
 
-.fa-square-x-twitter:before {
-  content: "\e61a";
-}
-
 .fa-reacteurope:before {
   content: "\f75d";
 }
@@ -10318,7 +10254,7 @@ readers do not read off random characters that represent icons */
 }
 
 /*!
- * Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com
+ * Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  * Copyright 2023 Fonticons, Inc.
  */
