--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,16 @@
   flex: 1;
 }
 
+.validation-error {
+  color: red;
+  font-weight: 600;
+  font-size: 0.85rem;
+}
+
+.display-none {
+  display: none;
+}
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px;
