--- a/css/styles.css
+++ b/css/styles.css
@@ -260,6 +260,11 @@
   display: none;
 }
 
+#submitButton:disabled {
+  opacity: 0.7;
+  pointer-events: none;
+}
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px;
