--- a/css/styles.css
+++ b/css/styles.css
@@ -85,14 +85,7 @@
   font-size: 0.9rem;
 }
 
-.header .decoration-star {
-  top: 80px;
-  left: -200px;
-  width: 500px;
-  opacity: 0.7;
-}
-
-.header .decoration-star-2 {
+.header .photographer-decoration-1 {
   top: 80px;
   right: -200px;
   width: 500px;
@@ -112,6 +105,26 @@
   text-align: justify;
   color: black;
   font-weight: 300;
+}
+
+#about-our-values .photographer-decoration-2 {
+  top: 80px;
+  left: -200px;
+  width: 500px;
+  opacity: 0.7;
+}
+
+.about-paragraph {
+  text-align: justify;
+}
+
+.our-values-paragraph {
+  text-align: justify;
+}
+
+.our-values-image {
+  border-radius: 2rem;
+  max-height: 750px;
 }
 
 .video-play-button {
