--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@
   --red-1: hsl(4, 85%, 59%);
   --blue-1: hsl(217, 45%, 48%);
   --purple-1: hsl(338, 52%, 48%);
+  --facebook-logo: #1877f2;
+  --instagram-logo: #fd1d1d;
+  --whatsapp-logo: #075e54;
 }
 
 .logo-link {
@@ -127,6 +130,28 @@
   max-height: 750px;
 }
 
+.icons-container a {
+  text-decoration: none;
+  color: white;
+}
+
+.icons-container a:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.fa-facebook {
+  color: var(--facebook-logo);
+}
+
+.fa-instagram {
+  color: var(--instagram-logo);
+}
+
+.fa-whatsapp {
+  color: var(--whatsapp-logo);
+}
+
 .video-play-button {
   position: absolute;
   z-index: 10;
@@ -248,7 +273,7 @@
 }
 
 .get-quote {
-  background-color: rebeccapurple;
+  background-color: lightgray;
 }
 
 .modal-footer {
