--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,18 @@
   color: var(--whatsapp-logo);
 }
 
+#contact .photographer-decoration-3 {
+  top: 10px;
+  left: -200px;
+  width: 500px;
+  opacity: 0.7;
+}
+
+.contact-image {
+  border-radius: 2rem;
+  max-height: 750px;
+}
+
 .video-play-button {
   position: absolute;
   z-index: 10;
