--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -165,6 +165,21 @@
 
 // Styling Call To Action end
 
+// Styling contact section start
+#contact .photographer-decoration-3 {
+  top: 10px;
+  left: -200px;
+  width: 500px;
+  opacity: 0.7;
+}
+
+.contact-image {
+  border-radius: 2rem;
+  max-height: 750px;
+}
+
+// Styling contact section end
+
 // Video Play Button
 
 .video-play-button {
