further work on the footer

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -180,6 +180,18 @@
 
 // Styling contact section end
 
+// Styling the footer start
+
+.logo-footer {
+  gap: 0.75rem;
+}
+
+.p-logo-footer {
+  text-align: justify;
+}
+
+// Styling the footer end
+
 // Video Play Button
 
 .video-play-button {
