--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,14 @@
   max-height: 750px;
 }
 
+.logo-footer {
+  gap: 0.75rem;
+}
+
+.p-logo-footer {
+  text-align: justify;
+}
+
 .video-play-button {
   position: absolute;
   z-index: 10;
