--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -223,6 +223,18 @@
 
 // Styling the side buttons end
 
+// Styling the thank-you page start
+
+.container-thank-you {
+  height: 100vh;
+}
+
+.logo-thank-you-page {
+  width: 100px;
+}
+
+// Styling the thank-you page end
+
 // Video Play Button
 
 .video-play-button {
