--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@
   --instagram-logo: #fd1d1d;
   --whatsapp-logo: #075e54;
   --green-adda-logo: hsl(127, 42%, 47%);
+  --orange-adda-logo: hsl(27, 95%, 59%);
+  --yeallow-adda-logo: hsl(46, 100%, 60%);
 }
 
 .logo-link {
@@ -357,6 +359,10 @@
 #submitButton:disabled {
   opacity: 0.7;
   pointer-events: none;
+}
+
+.call-to-action-services {
+  background-color: #fdf5e6;
 }
 
 @media (max-width: 992px) {
