--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,6 +6,8 @@
   --instagram-logo: #fd1d1d;
   --whatsapp-logo: #075e54;
   --green-adda-logo: hsl(127, 42%, 47%);
+  --orange-adda-logo: hsl(27, 95%, 59%);
+  --yeallow-adda-logo: hsl(46, 100%, 60%);
 }
 
 .logo-link {
@@ -398,6 +400,15 @@
 }
 
 // Styling the form end
+
+// Styling the services page start
+
+.call-to-action-services {
+  // background-color: var(--yeallow-adda-logo);
+  background-color: #fdf5e6;
+}
+
+// Styling the services page end
 
 @media (max-width: 992px) {
   .xl-text {
