--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -496,3 +496,88 @@
 }
 
 // starter CSS end
+
+// Media Queries
+
+@media (max-width: 375px) {
+  .logo-link img {
+    width: 35px;
+  }
+
+  .logo-text {
+    font-size: 1.2rem;
+  }
+
+  .logo-subtext {
+    font-size: 0.7rem;
+  }
+
+  .header-p {
+    background-color: white;
+    padding: 1.5rem;
+    border-radius: 1rem;
+  }
+
+  .header-image {
+    padding: 3rem;
+    border-radius: 4rem;
+  }
+
+  #about-our-values {
+    padding-top: 2rem !important;
+  }
+
+  .about-paragraph {
+    position: relative;
+    background-color: white !important;
+    z-index: 10;
+    padding: 1rem;
+    border-radius: 1rem;
+  }
+
+  #details {
+    margin-top: 20px !important;
+  }
+
+  .our-values-paragraph {
+    padding: 1.2rem;
+    text-align: left;
+  }
+
+  .our-values-title {
+    margin-bottom: 0.5rem !important;
+    text-align: center;
+  }
+
+  .our-values-list li {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .container-cta {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contact-btn-cta {
+    margin-bottom: 1rem;
+  }
+
+  .footer-custom {
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+  }
+
+  .testimonials {
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+  }
+
+  .testimonial-p {
+    font-size: 1.2rem !important;
+  }
+
+  .testimonial-name {
+    font-size: 1rem !important;
+  }
+}
