--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 :root {
   --red-1: hsl(4, 85%, 59%);
-  --blue-1: hsl(217, 45%, 48%);
+  --blue-1: hsl(217, 45%, 28%);
   --purple-1: hsl(338, 52%, 48%);
   --facebook-logo: #1877f2;
   --instagram-logo: #fd1d1d;
@@ -393,6 +393,11 @@
 
 .call-to-action-services {
   background-color: #fdf5e6;
+  padding-top: 3rem !important;
+}
+
+.cta-buttons-container {
+  align-items: unset !important;
 }
 
 .toast {
