--- a/css/styles.css
+++ b/css/styles.css
@@ -513,6 +513,12 @@
     gap: 0.5rem;
     flex-wrap: wrap;
   }
+  .portfolio-cta-custom {
+    padding: 3rem !important;
+  }
+  #contactForm {
+    padding: 0 !important;
+  }
 }
 @media (max-width: 992px) {
   .xl-text {
