--- a/css/styles.css
+++ b/css/styles.css
@@ -418,6 +418,7 @@
     background-color: white;
     padding: 1.5rem;
     border-radius: 1rem;
+    font-size: 1.1rem;
   }
   .header-image {
     padding: 3rem;
@@ -432,6 +433,10 @@
     z-index: 10;
     padding: 1rem;
     border-radius: 1rem;
+    font-size: 1.1rem !important;
+  }
+  #about-our-values {
+    padding: 2rem 0 !important;
   }
   #details {
     margin-top: 20px !important;
@@ -490,6 +495,9 @@
   .footer-custom {
     padding-top: 1rem !important;
     padding-bottom: 1rem !important;
+  }
+  .get-quote {
+    padding: 4rem 0 !important;
   }
   .services-p {
     font-size: 1.2rem;
