--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -477,6 +477,7 @@
     background-color: white;
     padding: 1.5rem;
     border-radius: 1rem;
+    font-size: 1.1rem;
   }
 
   .header-image {
@@ -494,6 +495,11 @@
     z-index: 10;
     padding: 1rem;
     border-radius: 1rem;
+    font-size: 1.1rem !important;
+  }
+
+  #about-our-values {
+    padding: 2rem 0 !important;
   }
 
   #details {
@@ -568,6 +574,10 @@
   .footer-custom {
     padding-top: 1rem !important;
     padding-bottom: 1rem !important;
+  }
+
+  .get-quote {
+    padding: 4rem 0 !important;
   }
 
   // services page starts
