--- a/css/styles.css
+++ b/css/styles.css
@@ -535,7 +535,7 @@
   .category-buttons-container-custom {
     display: flex;
     gap: 0.5rem;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
   }
   .portfolio-cta-custom {
     padding: 3rem !important;
