--- a/css/styles.css
+++ b/css/styles.css
@@ -256,6 +256,10 @@
   display: none;
 }
 
+.school-icon-custom {
+  display: none;
+}
+
 .video-play-button {
   position: absolute;
   z-index: 10;
@@ -421,6 +425,9 @@
 }
 
 @media (max-width: 576px) {
+  .navbar-custom {
+    height: unset;
+  }
   .logo-link img {
     width: 35px;
   }
@@ -564,8 +571,21 @@
   .studio-icon-custom {
     display: block;
   }
+  .school-icon-custom {
+    display: block;
+  }
   #contactForm {
     padding: 0 !important;
+  }
+}
+@media (min-width: 576px) and (max-width: 768px) {
+  .navbar-custom {
+    height: unset;
+  }
+}
+@media (min-width: 768px) and (max-width: 992px) {
+  .navbar-custom {
+    height: unset;
   }
 }
 @media (max-width: 992px) {
