--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -478,6 +478,10 @@
 
 // starter CSS end
 
+// too-many-reqests start
+
+// too-many-reqests end
+
 // Media Queries
 
 @media (max-width: 576px) {
